--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MYSQL_HOST = '' #ip of server
 MYSQL_USER = '' #user for server
 MYSQL_PASSWORD = '' #password for server
-MYSQL_DATABASE = '' #specified database to work within
+MYSQL_DATABASE = 'sqlsandbox' #specified database to work within
